Learned about cropping and sizing photos based on screen size. to make sure that mobile users are not downloading large images to kill their bandwith

--- a/app/assets/scss/modules/_global-styles.scss
+++ b/app/assets/scss/modules/_global-styles.scss
@@ -30,6 +30,12 @@ img {
   background: $highlightColor;
 }
 
+// Image 
+.obj-fit {
+  object-fit: cover;
+  width: 100%;
+}
+
 
 
 // Button Styles
