--- a/app/assets/scss/modules/_main-hero.scss
+++ b/app/assets/scss/modules/_main-hero.scss
@@ -6,7 +6,6 @@
 
   &__main-image {
     height: 75vh;
-    object-fit: cover;
   }
 
 
